Reduce spacing between entries in Unicode Character dialog. Bump up font-size. Partial fix for https://gitlab.com/inkscape/inkscape/issues/436

--- a/share/ui/style.css
+++ b/share/ui/style.css
@@ -492,3 +492,7 @@ combobox window.popup scrolledwindow treeview separator {}
     padding: 0;
     outline-style: none;
 }
+
+#UnicodeIconView {
+    font-size: 16px;
+}
